--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   encrypt: ^5.0.3
   local_auth: ^3.0.0
   google_mlkit_text_recognition: ^0.15.0
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
